syntax = "proto3";

option java_package = "io.ennoo.fabric-client.grpc.proto.chain";
option java_outer_classname = "ChannelProto";
option go_package = "grpc/proto/chain";

package chain;

message ChannelCreate {
    string configID = 1;
    string orderOrgName = 2;
    string orgName = 3;
    string orgUser = 4;
    string channelID = 5;
    string channelConfigPath = 6;
}

message ChannelJoin {
    string configID = 1;
    string orderName = 2;
    string orgName = 3;
    string orgUser = 4;
    string channelID = 5;
    string peerUrl = 6;
}

message ChannelList {
    string configID = 1;
    string orgName = 2;
    string orgUser = 3;
    string peerName = 4;
}